--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: mellinoe@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: effyneber
+twitter_username: ericmellino
 github_username: mellinoe
 
 # Build settings
